<resources>
    <string name="app_name">Movies</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release date</string>
    <string name="user_rating_label">User rating</string>
    <string name="original_title_label">Original title</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_movie_category_label">Movies Category</string>

    <string name="pref_tag_label_most_popular">Most Popular</string>
    <string name="pref_tag_label_top_rated">Top Rated</string>
    <string name="pref_tag_label_favorites">Favorites</string>

    <string name="pref_category_key" translatable="false">Movies Category</string>
    <string name="pref_category_most_popular_value" translatable="false">popular</string>
    <string name="pref_category_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_category_favorites_value" translatable="false">favorites</string>

    <string name="action_settings">Settings</string>
    <string name="api_error">No API response, is key OK?</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="no_reviews_title">No reviews</string>
    <string name="no_reviews_message">No reviews available</string>
    <string name="action_toggle_favorite">toggle favorite</string>
    <string name="favorited">added to favorites</string>
    <string name="unfavorited">removed from favorites</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
